[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Enemies/HornedEyeBall.gd" type="Script" id=1]
[ext_resource path="res://Textures/ Enemies/hornedEyeBall/hornedEyeBall2.png" type="Texture" id=2]
[ext_resource path="res://Textures/ Enemies/hornedEyeBall/hornedEyeBall1.png" type="Texture" id=3]
[ext_resource path="res://Textures/ Enemies/hornedEyeBall/hornedEyeBall3.png" type="Texture" id=4]
[ext_resource path="res://Textures/ Enemies/hornedEyeBall/hurt/hornedEyeBal_hurt1.png" type="Texture" id=5]
[ext_resource path="res://Textures/ Enemies/Attacks/muzzleFlash/muzzleFlash2.png" type="Texture" id=6]
[ext_resource path="res://Textures/ Enemies/Attacks/muzzleFlash/muzzleFlash1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8.20848, 4.76339 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), null ],
"loop": false,
"name": "default",
"speed": 7.0
} ]

[node name="HornedEyeBall" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
frame = 2
playing = true

[node name="MuzzleFlashSprite" type="AnimatedSprite" parent="AnimatedSprite"]
position = Vector2( 7, 1 )
z_index = 1
frames = SubResource( 3 )
frame = 2

[node name="HurtTween" type="Tween" parent="."]

[node name="BulletTimer" type="Timer" parent="."]

[node name="FirePosition" type="Position2D" parent="."]
position = Vector2( 6, 1 )

[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
